# Radiofil_AM8

./: AM8_docker  Arborescence_orangepi.txt  README.md  build_projet.sh
Configuration/: 400Hz-Usine_rfl.lst  frequences_op_rfl.txt  hostname  liste_stations_rfl.txt  mpd.conf  mpd01.conf  mpd02.conf  mpd03.conf  mpd04.conf  mpd05.conf  mpd06.conf  mpd07.conf  mpd08.conf  mpd11.conf  mpd12.conf  mpd13.conf  mpd14.conf  mpd15.conf  mpd16.conf  mpd17.conf  mpd18.conf  parms.ini  plan_freqs_rfl.txt  rc.local  url_serveur.txt  version.txt
IHM/: index.php
IHM/css/: am8.css
IHM/inc/: define.php  fonctions.php  style.php
ModulateurAM8/: CMakeLists.txt  LICENSE  build_modulateur.sh
ModulateurAM8/src/: carr.pio  carr.pio.h  main.c  picoprobe_config.h
Programmes/: am031.c  definitions.h  lance_am8.c  maj_am8.c
Scripts/: build_tar.sh  compilation.sh  cross_compilation.sh  eteindre_am8.sh  install.sh  maj_am8.sh  start.sh  stopper_am8.sh
